--- a/sass/layouts/_photo-gallery.scss
+++ b/sass/layouts/_photo-gallery.scss
@@ -38,28 +38,50 @@
         position: absolute;
         width: 390px;
         height: 1092px;
-        background-image: url('/images/index/png/photo-gallery_clouds_mob.png');
+        background-image: url('/images/index/png/gallery_clouds_mob.png');
         z-index: -1;
         outline: 1px solid tomato;
+        // animation: swing 20s ease infinite, fly 5s linear infinite;
+
+        // @keyframes swing {
+
+        //     0%,
+
+        //     100% {
+        //         transform: translateX(0);
+        //     }
+
+        //     25% {
+        //         transform: translateX(-20px);
+        //     }
+
+        //     50% {
+        //         transform: translateX(20px);
+        //     }
+
+        //     75% {
+        //         transform: translateX(-10px);
+        //     }
+        // }
 
         @media screen and (min-width: 834px) {
             margin-top: -24px;
             width: 754px;
             height: 1056px;
-            background-image: url('/images/index/png/photo-gallery_clouds_tab.png');
+            background-image: url('/images/index/png/gallery_clouds_tab.png');
         }
 
         @media screen and (min-width: 1440px) {
             margin-top: -64px;
             width: 1268px;
             height: 1800px;
-            background-image: url('/images/index/png/photo-gallery_clouds_desk.png');
+            background-image: url('/images/index/png/gallery_clouds_desk.png');
         }
 
         @media screen and (min-width: 1728px) {
             width: 1568px;
             height: 1860px;
-            background-image: url('/images/index/png/photo-gallery_clouds_mac.png');
+            background-image: url('/images/index/png/gallery_clouds_mac.png');
         }
     }
 
@@ -67,15 +89,25 @@
 
     &__item {
         position: relative;
-        // display: flex;
-        z-index: 10;
+        // animation: swing 20s ease infinite;
+
+        // @keyframes fly {
+        //     0% {
+        //         transform: translateY(0);
+        //     }
+
+        //     100% {
+        //         transform: translateY(50px);
+        //     }
+        // }
+
 
         &--1 {
             top: -64px;
             left: 282px;
             width: 392px;
             height: 536px;
-            background-image: url('/images/index/png/balloon1.png');
+            background-image: url('/images/index/png/gallery_balloon1_mac.png');
             stroke-width: 4px;
             stroke: #C1FAF6;
 
@@ -96,7 +128,205 @@
             left: 1072px;
             width: 404px;
             height: 536px;
-            background-image: url('/images/index/png/balloon2.png');
+            background-image: url('/images/index/png/gallery_balloon2_mac.png');
+
+            &::before {
+                content: '';
+                position: absolute;
+                top: 0;
+                left: 0;
+                background-size: contain;
+                background-repeat: no-repeat;
+                width: 100%;
+                height: 100%;
+                background-image: url('');
+            }
+        }
+
+        &--3 {
+            top: -836px;
+            left: -36px;
+            width: 398px;
+            height: 498px;
+            background-image: url('/images/index/png/gallery_balloon3_mac.png');
+
+            &::before {
+                content: '';
+                position: absolute;
+                top: 0;
+                left: 0;
+                background-size: contain;
+                background-repeat: no-repeat;
+                width: 100%;
+                height: 100%;
+                background-image: url('');
+            }
+        }
+
+        &--4 {
+            top: -1354px;
+            left: 772px;
+            width: 316px;
+            height: 408px;
+            background-image: url('/images/index/png/gallery_balloon4_mac.png');
+
+            &::before {
+                content: '';
+                position: absolute;
+                top: 0;
+                left: 0;
+                background-size: contain;
+                background-repeat: no-repeat;
+                width: 100%;
+                height: 100%;
+                background-image: url('');
+            }
+        }
+
+        &--5 {
+            top: -1568px;
+            left: 1140px;
+            width: 428px;
+            height: 564px;
+            background-image: url('/images/index/png/gallery_balloon5_mac.png');
+
+            &::before {
+                content: '';
+                position: absolute;
+                top: 0;
+                left: 0;
+                background-size: contain;
+                background-repeat: no-repeat;
+                width: 100%;
+                height: 100%;
+                background-image: url('');
+            }
+        }
+
+        &--6 {
+            top: -2016px;
+            left: 384px;
+            width: 336px;
+            height: 448px;
+            background-image: url('/images/index/png/gallery_balloon6_mac.png');
+
+            &::before {
+                content: '';
+                position: absolute;
+                top: 0;
+                left: 0;
+                background-size: contain;
+                background-repeat: no-repeat;
+                width: 100%;
+                height: 100%;
+                background-image: url('');
+            }
+        }
+
+        &--7 {
+            top: -2364px;
+            left: 774px;
+            width: 338px;
+            height: 452px;
+            background-image: url('/images/index/png/gallery_balloon7_mac.png');
+
+            &::before {
+                content: '';
+                position: absolute;
+                top: 0;
+                left: 0;
+                background-size: contain;
+                background-repeat: no-repeat;
+                width: 100%;
+                height: 100%;
+                background-image: url('');
+            }
+        }
+
+        &--8 {
+            top: -2628px;
+            left: 64px;
+            width: 408px;
+            height: 548px;
+            background-image: url('/images/index/png/gallery_balloon8_mac.png');
+
+            &::before {
+                content: '';
+                position: absolute;
+                top: 0;
+                left: 0;
+                background-size: contain;
+                background-repeat: no-repeat;
+                width: 100%;
+                height: 100%;
+                background-image: url('');
+            }
+        }
+
+        &--9 {
+            top: -3040px;
+            left: 560px;
+            width: 332px;
+            height: 428px;
+            background-image: url('/images/index/png/gallery_balloon9_mac.png');
+
+            &::before {
+                content: '';
+                position: absolute;
+                top: 0;
+                left: 0;
+                background-size: contain;
+                background-repeat: no-repeat;
+                width: 100%;
+                height: 100%;
+                background-image: url('');
+            }
+        }
+
+        &--10 {
+            top: -3452px;
+            left: 1122px;
+            width: 438px;
+            height: 564px;
+            background-image: url('/images/index/png/gallery_balloon10_mac.png');
+
+            &::before {
+                content: '';
+                position: absolute;
+                top: 0;
+                left: 0;
+                background-size: contain;
+                background-repeat: no-repeat;
+                width: 100%;
+                height: 100%;
+                background-image: url('');
+            }
+        }
+
+        &--11 {
+            top: -3722px;
+            left: 292px;
+            width: 404px;
+            height: 536px;
+            background-image: url('/images/index/png/gallery_balloon11_mac.png');
+
+            &::before {
+                content: '';
+                position: absolute;
+                top: 0;
+                left: 0;
+                background-size: contain;
+                background-repeat: no-repeat;
+                width: 100%;
+                height: 100%;
+                background-image: url('');
+            }
+        }
+
+        &--12 {
+            width: 396px;
+            height: 520px;
+            background-image: url('/images/index/png/gallery_balloon12_mac.png');
 
             &::before {
                 content: '';
