--- a/css/main.css
+++ b/css/main.css
@@ -3211,82 +3211,228 @@ body {
 }
 
 .footer-section {
-  height: 340px;
+  height: 428px;
   position: relative;
-  margin-top: 80px;
-  padding-top: 40px;
+  margin-top: 66px;
+  padding-top: 20px;
   box-shadow: inset 0 1px 4px 0 rgba(21, 16, 15, 0.25);
   background-color: #e2e7eb;
 }
+@media screen and (min-width: 834px) {
+  .footer-section {
+    margin-top: 44px;
+    padding-top: 24px;
+    height: 304px;
+  }
+}
+@media screen and (min-width: 1440px) {
+  .footer-section {
+    margin-top: 62px;
+    padding-top: 28px;
+    height: 300px;
+  }
+}
+@media screen and (min-width: 1728px) {
+  .footer-section {
+    margin-top: 80px;
+    padding-top: 40px;
+    height: 340px;
+  }
+}
+
 .footer {
   display: flex;
 }
 .footer__button-list {
-  display: flex;
+  margin-bottom: 100px;
+}
+@media screen and (min-width: 834px) {
+  .footer__button-list {
+    display: flex;
+    margin-bottom: 0px;
+  }
 }
 .footer__button-item {
-  height: 64px;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  margin-bottom: 116px;
-  padding-left: 20px;
-  padding-right: 20px;
+  height: 52px;
+  margin-left: 28px;
+  padding: 8px 35px 8px 35px;
+  line-height: 100%;
   box-shadow: 0 4px 4px 0 rgba(21, 16, 15, 0.25);
   background: linear-gradient(90deg, #fff 0%, rgba(255, 255, 255, 0) 100%);
   border-radius: 8px;
 }
+@media screen and (min-width: 834px) {
+  .footer__button-item {
+    margin-left: 0px;
+    margin-bottom: 108px;
+    padding: 8px 12px 8px 12px;
+  }
+}
+@media screen and (min-width: 1440px) {
+  .footer__button-item {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 100px;
+  }
+}
+@media screen and (min-width: 1728px) {
+  .footer__button-item {
+    height: 64px;
+    padding: 8px 20px 8px 20px;
+    margin-bottom: 116px;
+  }
+}
 .footer__button-item--1 {
-  width: 554px;
-  margin-left: 80px;
+  width: 334px;
+}
+@media screen and (min-width: 834px) {
+  .footer__button-item--1 {
+    width: 288px;
+    margin-left: 60px;
+  }
+}
+@media screen and (min-width: 1440px) {
+  .footer__button-item--1 {
+    width: 444px;
+    margin-left: 86px;
+  }
+}
+@media screen and (min-width: 1728px) {
+  .footer__button-item--1 {
+    width: 554px;
+    margin-left: 80px;
+  }
 }
 .footer__button-item--2 {
-  width: 500px;
-  margin-left: 37px;
-  margin-right: 37px;
+  width: 334px;
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
+@media screen and (min-width: 834px) {
+  .footer__button-item--2 {
+    width: 204px;
+    margin: 0 12px 0 12px;
+  }
+}
+@media screen and (min-width: 1440px) {
+  .footer__button-item--2 {
+    width: 400px;
+    margin-left: 32px;
+    margin-right: 32px;
+  }
+}
+@media screen and (min-width: 1728px) {
+  .footer__button-item--2 {
+    width: 500px;
+    margin-left: 37px;
+    margin-right: 37px;
+  }
 }
 .footer__button-item--3 {
-  width: 440px;
+  width: 334px;
+}
+@media screen and (min-width: 834px) {
+  .footer__button-item--3 {
+    width: 198px;
+  }
+}
+@media screen and (min-width: 1440px) {
+  .footer__button-item--3 {
+    width: 360px;
+  }
+}
+@media screen and (min-width: 1728px) {
+  .footer__button-item--3 {
+    width: 440px;
+  }
 }
 .footer__button-text {
   font-family: var(--title_font);
   font-weight: 700;
-  font-size: 24px;
+  font-size: 16px;
   letter-spacing: normal;
   color: var(--title_color);
 }
+@media screen and (min-width: 1440px) {
+  .footer__button-text {
+    font-size: 20px;
+  }
+}
+@media screen and (min-width: 1728px) {
+  .footer__button-text {
+    font-size: 24px;
+  }
+}
 .footer__button-text--2 {
   font-weight: 400;
-  font-size: 20px;
+  font-size: 16px;
   text-decoration: underline;
+}
+@media screen and (min-width: 1728px) {
+  .footer__button-text--2 {
+    font-size: 20px;
+  }
 }
 .footer__icon-list {
   position: absolute;
-  top: 136px;
-  left: 784px;
+  top: 236px;
+  left: 115px;
   display: flex;
 }
+@media screen and (min-width: 834px) {
+  .footer__icon-list {
+    top: 100px;
+    left: 337px;
+  }
+}
+@media screen and (min-width: 1440px) {
+  .footer__icon-list {
+    top: 108px;
+    left: 656px;
+  }
+}
+@media screen and (min-width: 1728px) {
+  .footer__icon-list {
+    top: 136px;
+    left: 784px;
+  }
+}
 .footer__icon-item:last-child {
-  margin-left: 56px;
+  margin-left: 40px;
+}
+@media screen and (min-width: 1728px) {
+  .footer__icon-item:last-child {
+    margin-left: 56px;
+  }
 }
 .footer__icon {
-  width: 52px;
-  height: 52px;
+  width: 60px;
+  height: 60px;
   border-radius: 50%;
   box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.25);
+}
+@media screen and (min-width: 1440px) {
+  .footer__icon {
+    width: 44px;
+    height: 44px;
+  }
+}
+@media screen and (min-width: 1728px) {
+  .footer__icon {
+    width: 52px;
+    height: 52px;
+  }
 }
 .footer__icon:hover {
   box-shadow: none;
   fill: aqua;
 }
 .footer__requisites {
-  width: 1728px;
-  height: 120px;
-  padding-top: 12px;
+  height: 112px;
+  padding-top: 8px;
   display: block;
-  width: 100%;
   background-color: white;
-  outline: 1px solid tomato;
   font-family: var(--text_font);
   font-weight: 300;
   font-size: 12px;
@@ -3294,4 +3440,10 @@ body {
   letter-spacing: 0.05em;
   text-align: center;
   color: var(--text_color);
+}
+@media screen and (min-width: 834px) {
+  .footer__requisites {
+    padding-top: 12px;
+    height: 120px;
+  }
 }/*# sourceMappingURL=main.css.map */
